--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.29.0",
     "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.18.2",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
